--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -264,6 +264,7 @@
     "minecraft:iron_bars": false,
     "minecraft:mycelium": false,
     "iceandfire:gold_pile": false,
+    "cataclysm:stone_tiles": false,
     "minecraft:gray_carpet": false,
     "minecraft:stone_brick_wall": false,
     "iceandfire:dread_stone_bricks": false,
@@ -315,14 +316,18 @@
     "quark:vertical_birch_planks": false,
     "minecraft:slime_ball": false,
     "born_in_chaos_v1:ethereal_spirit": false,
+    "minecraft:spruce_fence": false,
     "minecraft:granite": false,
+    "minecraft:stone_brick_slab": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
     "supplementaries:cage": false,
     "minecraft:diamond_pickaxe": false,
     "minecraft:spruce_sapling": false,
+    "minecraft:cobblestone_stairs": false,
     "minecraft:stripped_jungle_wood": false,
     "minecraft:acacia_log": false,
+    "minecraft:stone": false,
     "minecraft:sand": false,
     "minecraft:red_bed": false,
     "minecraft:jungle_planks": false,
@@ -347,6 +352,7 @@
     "ecologics:walnut_log": false,
     "luminousworld:savannah_soil": false,
     "iceandfire:copper_sword": false,
+    "minecraft:stone_brick_stairs": false,
     "twilightforest:bold_stone_pillar": false,
     "minecraft:golden_apple": false,
     "minecraft:cooked_mutton": false,
@@ -391,12 +397,14 @@
     "minecraft:melon_slice": false,
     "iceandfire:silver_axe": false,
     "tombstone:grave_key": false,
+    "cataclysm:stone_tiles": false,
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
     "minecraft:oak_planks": false,
     "minecraft:mutton": false,
     "minecraft:stone_axe": false,
     "minecraft:oak_fence": false,
+    "minecraft:spruce_leaves": false,
     "minecraft:spruce_planks": false,
     "minecraft:porkchop": false,
     "minecraft:stick": false,
@@ -409,6 +417,7 @@
     "minecraft:flint": false,
     "minecraft:kelp": false,
     "minecraft:birch_leaves": false,
+    "minecraft:spruce_trapdoor": false,
     "minecraft:dandelion": false
   },
   "disableForAllTileEntities": false,
