--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -400,6 +400,7 @@
     "cataclysm:stone_tiles": false,
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
+    "minecraft:obsidian": false,
     "minecraft:oak_planks": false,
     "minecraft:mutton": false,
     "minecraft:stone_axe": false,
