--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -91,6 +91,7 @@
     "iceandfire:crackled_stone": false,
     "minecraft:dark_oak_slab": false,
     "minecraft:deepslate_diamond_ore": false,
+    "alexscaves:amber": false,
     "iceandfire:pixie_house_spruce": false,
     "minecraft:waxed_oxidized_cut_copper_stairs": false,
     "minecraft:deepslate_copper_ore": false,
@@ -122,6 +123,7 @@
     "minecraft:cyan_carpet": false,
     "iceandfire:silver_pile": false,
     "minecraft:oak_planks": false,
+    "minecraft:gold_block": false,
     "minecraft:cut_sandstone": false,
     "born_in_chaos_v1:chipped_black_argillite_brick": false,
     "minecraft:spruce_leaves": false,
@@ -261,6 +263,7 @@
     "minecraft:cartography_table": false,
     "born_in_chaos_v1:black_argillite": false,
     "minecraft:smooth_sandstone": false,
+    "alexscaves:limestone": false,
     "minecraft:iron_bars": false,
     "minecraft:mycelium": false,
     "iceandfire:gold_pile": false,
@@ -289,6 +292,7 @@
     "minecraft:mangrove_trapdoor": false,
     "minecraft:brown_terracotta": false,
     "minecraft:stripped_mangrove_wood": false,
+    "alexscaves:ambersol": false,
     "minecraft:emerald_ore": false,
     "minecraft:cobbled_deepslate_slab": false
   },
@@ -392,6 +396,7 @@
     "minecraft:dirt": false,
     "minecraft:diamond": false,
     "minecraft:potato": false,
+    "alexscaves:limestone": false,
     "quark:birch_ladder": false,
     "minecraft:water_bucket": false,
     "minecraft:melon_slice": false,
