--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -295,7 +295,9 @@
     "EntitySkelewag": true,
     "IceologerEntity": true,
     "ElderGuardian": true,
-    "Guardian": true
+    "Guardian": true,
+    "Silverfish": true,
+    "EntityDreadBeast": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -499,7 +501,9 @@
     "EntitySkelewag": false,
     "IceologerEntity": false,
     "ElderGuardian": false,
-    "Guardian": false
+    "Guardian": false,
+    "Silverfish": false,
+    "EntityDreadBeast": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -652,6 +656,9 @@
     "DarkOakZombieEntity": 25.0,
     "StrayBoneSpider": 24.0,
     "Guardian": 30.0,
-    "SearedSpiritEntity": 50.0
+    "SearedSpiritEntity": 50.0,
+    "EntityDreadBeast": 30.0,
+    "EntityFoliaath": 10.0,
+    "EntityDreadGhoul": 30.0
   }
 }
