--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -660,6 +660,7 @@
     "EntityDreadBeast": 30.0,
     "EntityFoliaath": 10.0,
     "EntityDreadGhoul": 30.0,
-    "EntityDreadScuttler": 40.0
+    "EntityDreadScuttler": 40.0,
+    "MushroomFieldsEnderman": 40.0
   }
 }
