--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -131,6 +131,7 @@
     "luminousworld:ancient_sandstonebricks": false,
     "minecraft:jungle_log": false,
     "minecraft:yellow_terracotta": false,
+    "minecraft:packed_mud": false,
     "iceandfire:silver_ore": false,
     "minecraft:acacia_slab": false,
     "minecraft:purple_bed": false,
@@ -161,6 +162,7 @@
     "minecraft:black_bed": false,
     "minecraft:redstone_lamp": false,
     "minecraft:bricks": false,
+    "alexscaves:cycad": false,
     "iceandfire:pixie_jar_4": false,
     "alexscaves:spelunkery_table": false,
     "quark:vertical_birch_planks": false,
