--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -65,6 +65,7 @@
     "minecraft:dirt_path": false,
     "minecraft:white_wool": false,
     "minecraft:campfire": false,
+    "alexscaves:flood_basalt": false,
     "minecraft:budding_amethyst": false,
     "minecraft:oxidized_copper": false,
     "minecraft:smooth_basalt": false,
@@ -103,6 +104,8 @@
     "minecraft:mossy_stone_brick_stairs": false,
     "minecraft:tuff": false,
     "iceandfire:dread_stone_stairs": false,
+    "alexscaves:pewen_log": false,
+    "alexscaves:pewen_wood": false,
     "minecraft:diorite": false,
     "minecraft:cobblestone_slab": false,
     "minecraft:red_nether_bricks": false,
@@ -227,6 +230,7 @@
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
     "minecraft:stripped_birch_log": false,
+    "alexscaves:pewen_branch": false,
     "quark:glow_shroom_block": false,
     "minecraft:deepslate_redstone_ore": false,
     "iceandfire:pixie_jar_empty": false,
@@ -391,6 +395,7 @@
     "minecraft:stripped_dark_oak_wood": false,
     "minecraft:terracotta": false,
     "minecraft:string": false,
+    "minecraft:sandstone": false,
     "tombstone:gift": false,
     "furnitura:birch_shelf": false,
     "luminousworld:purple_petunias": false,
