--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -297,7 +297,8 @@
     "ElderGuardian": true,
     "Guardian": true,
     "Silverfish": true,
-    "EntityDreadBeast": true
+    "EntityDreadBeast": true,
+    "AxestromEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -503,7 +504,8 @@
     "ElderGuardian": false,
     "Guardian": false,
     "Silverfish": false,
-    "EntityDreadBeast": false
+    "EntityDreadBeast": false,
+    "AxestromEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
