--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -226,6 +226,7 @@
     "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
+    "alexscaves:amber_monolith": false,
     "quark:blossom_log": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
@@ -234,6 +235,7 @@
     "quark:glow_shroom_block": false,
     "minecraft:deepslate_redstone_ore": false,
     "iceandfire:pixie_jar_empty": false,
+    "alexsmobs:leafcutter_anthill": false,
     "iceandfire:chared_dirt": false,
     "iceandfire:ash": false,
     "minecraft:smooth_red_sandstone_stairs": false,
@@ -386,6 +388,8 @@
     "minecraft:iron_hoe": false,
     "minecraft:torch": false,
     "born_in_chaos_v1:charmof_stealth": false,
+    "alexscaves:heavy_bone": false,
+    "iceandfire:bestiary": false,
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
     "minecraft:stone_sword": false,
